2005-04-27 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Header/Search/LCTermQuery.h:
	* Source/Search/LCTermQuery.m: 
	* Header/Search/LCTermScorer.h:
	* Source/Search/LCTermScorer.m: 
	* Header/Search/LCNonMatchingScorer.h:
	* Source/Search/LCNonMatchingScorer.m: 
	* Header/Search/LCBooleanScorer.h:
	* Source/Search/LCBooleanScorer.m: 
	* Header/Search/LCDisjunctionSumScorer.h:
	* Source/Search/LCDisjunctionSumScorer.m: ported.
	NOTE: LCBooleanScorer is ported from BooleanScorer2 in lucene
	since it is the scorer for lucene 1.9/2.0.
	Original BooleanScorer in lucene is for 1.4.

2005-04-26 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Catch up lucene svn version.
	* Header/Search/LCBooleanQuery.h:
	* Source/Search/LCBooleanQuery.m: ported.

2005-04-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Header/Search/LCConjunctionScorer.h:
	* Source/Search/LCConjunctionScorer.m:
	* Header/Search/LCReqOptSumScorer.h:
	* Source/Search/LCReqOptSumScorer.m:
	* Header/Search/LCReqExclScorer.h:
	* Source/Search/LCReqExclScorer.m: ported.

2005-04-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Initial Search Implementation.
	* Make it compile again.
	* Header/Search/LCQueryFilter.h:
	* Source/Search/LCQueryFilter.m:
	* Header/Search/LCQueryTermVector.h:
	* Source/Search/LCQueryTermVector.m:
	* Header/Search/LCBooleanClause.h:
	* Source/Search/LCBooleanClause.m: ported
	* TODO: add classes for help.

2005-04-16 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Change method names to be more GNUstep-style.
	* Try to reduce the number of inclusion in header.
	* Source/Index/TestSegmentTermEnum.m:
	Test unit for LCSegmentTermEnum
	* chage "doc" in header to "document"

2005-04-15 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Util/LCBitVector.m:
	Clean up.
	* Source/Util/LCPriorityQueue.m:
	Move private methods into source code.
	Add LCComparable protocol.
	Remove -lessThan:: in favor of -compare: for GNUstep-style.
	* Headers/Index/LCCompoundFileWriter.h: